# glm-tray

./: .gitignore  CHANGELOG.md  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json  sample.html  sample.mjs  vite.config.ts
.claude/: sisyphus-schema.json  sisyphus.jsonc
.github/workflows/: ci.yml  release.yml
.omc/state/: hud-state.json
.omx/: metrics.json
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
docs/: API.md  DEBUGGING.md  SCHEDULER.md  api-call-flow.md  mock-server.cjs  sample.mjs
public/: updater.json
src/: App.vue  main.ts  styles.css
src-original/: main.ts
src-original/lib/: api.ts  helpers.ts  state.ts  update.ts
src-original/lib/views/: dashboard.ts  global-settings.ts  render.ts
src-original/lib/views/tabs/: schedule.ts  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_client.rs  config.rs  file_logger.rs  lib.rs  main.rs  models.rs  scheduler.rs  tray.rs  update_checker.rs
src/components/: RadialGauge.vue  Sidebar.vue
src/lib/: api.ts  constants.ts  helpers.ts  sidebar.ts  state.ts  types.ts  ui-helpers.ts
src/lib/views/: dashboard.ts  global-settings.ts  key-detail.ts  render.ts
src/lib/views/tabs/: schedule.ts  settings.ts  stats.ts
src/router/: index.ts
src/stores/: app.ts  keys.ts  settings.ts
src/views/: Dashboard.vue  GlobalSettings.vue  KeyDetail.vue
src/views/tabs/: KeySchedule.vue  KeySettings.vue  KeyStats.vue
